--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             This product is backed by a 100% money back guarantee for 60 full days from your original purchase. If you’re not totally and completely satisfied with this product, your results or your experience in the first 60 days from your purchase simply let us know by dropping us an email and we’ll give you a full refund within 48 hours of the product being returned.
                         </p>
                         <p>
-                            hat’s right, simply return the product, even empty bottles, anytime within 60 days of your purchase and you’ll receive a full, no questions asked refund!Biotox Gold is Suitable For People Over 18?
+                            That’s right, simply return the product, even empty bottles, anytime within 60 days of your purchase and you’ll receive a full, no questions asked refund!Biotox Gold is Suitable For People Over 18?
 Are You Over 18?
                         </p>
                         <a href="https://www.clkmg.com/cliff20/brandbiddingbiotox/{keyword}-{AdID}/{QueryString}/{AdGroup}-{Device}/{Network}/
