--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Are You Over 18?
                             
                         </ul>
                         <a href="https://www.clkmg.com/cliff20/brandbiddingbiotox/{keyword}-{AdID}/{QueryString}/{AdGroup}-{Device}/{Network}/
-">Yes! Access The Official Site</a>
+">Access The Official Site</a>
                     </div>
                 </div>
             </div>
