--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script>
 <script>(function(w,d,t,r,u){var f,n,i;w[u]=w[u]||[],f=function(){var o={ti:"134407885"};o.q=w[u],w[u]=new UET(o),w[u].push("pageLoad")},n=d.createElement(t),n.src=r,n.async=1,n.onload=n.onreadystatechange=function(){var s=this.readyState;s&&s!=="loaded"&&s!=="complete"||(f(),n.onload=n.onreadystatechange=null)},i=d.getElementsByTagName(t)[0],i.parentNode.insertBefore(n,i)})(window,document,"script","//bat.bing.com/bat.js","uetq");</script>
         <meta charset="utf-8">
-        <title>Free Biotox Gold - Weight Loss Supplements</title>
+        <title>Biotox Gold - Weight Loss Supplements</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Weight Loss Landing Page" name="keywords">
         <meta content="Free Weight Loss Landing Page" name="description">
