--- a/promo/index.html
+++ b/promo/index.html
@@ -84,8 +84,8 @@ body{font-family: Inter;}blockquote{border-color: #3e83f8;}div[submit-success] >
 
     <div class="container">
         <div class="align-center mbr-p-1">
-            <p class="mbr-text mbr-white mbr-fonts-style display-7">Prefer To Read? Get the full story <a href="https://www.clkmg.com/cliff20/biotoxquickbuy/{keyword}-{AdID}/{QueryString}/{AdGroup}-{Device}/{Network}/" class="text-primary">here&nbsp;</a><br><a href="https://biotoxnutrition.com/privacy-policy/" class="text-primary">Privacy Policy</a> | <a href="https://biotoxnutrition.com/terms-of-service/" class="text-primary">Terms&nbsp;</a><a href="https://www.clkmg.com/cliff20/biotoxquickbuy/{keyword}-{AdID}/{QueryString}/{AdGroup}-{Device}/{Network}/">YES! ADD TO CART</a></div>
-            </div>" class="text-primary"><br></a><br></p>
+            <p class="mbr-text mbr-white mbr-fonts-style display-7">Prefer To Read? Get the full story <a href="https://www.clkmg.com/cliff20/biotoxquickbuy/{keyword}-{AdID}/{QueryString}/{AdGroup}-{Device}/{Network}/" class="text-primary">here&nbsp;</a><br><a href="https://biotoxnutrition.com/privacy-policy/" class="text-primary">Privacy Policy</a> | <a href="https://biotoxnutrition.com/terms-of-service/" class="text-primary">Terms&nbsp;</a><a href="https://www.clkmg.com/cliff20/biotoxquickbuy/{keyword}-{AdID}/{QueryString}/{AdGroup}-{Device}/{Network}/"></a></div>
+            </div></a></p>
         </div>
     </div>
 </section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/m" style="color:#aaa;">Get more</a></p></section>
