--- a/promo/index.html
+++ b/promo/index.html
@@ -84,7 +84,7 @@ body{font-family: Inter;}blockquote{border-color: #3e83f8;}div[submit-success] >
 
     <div class="container">
         <div class="align-center mbr-p-1">
-            <p class="mbr-text mbr-white mbr-fonts-style display-7">Prefer To Read? Get the full story <a href="https://www.clkmg.com/cliff20/biotoxquickbuy/{keyword}-{AdID}/{QueryString}/{AdGroup}-{Device}/{Network}/" class="text-primary">here&nbsp;</a><br><a href="https://biotoxnutrition.com/privacy-policy/" class="text-primary">Privacy Policy</a> | <a href="https://biotoxnutrition.com/terms-of-service/" class="text-primary">Terms&nbsp;</a><a href="https://www.clkmg.com/cliff20/biotoxquickbuy/{keyword}-{AdID}/{QueryString}/{AdGroup}-{Device}/{Network}/"></a></div>
+            <p class="mbr-text mbr-white mbr-fonts-style display-7">Prefer To Read? Get the full story <a href="https://www.clkmg.com/cliff20/biotoxquickbuy/{keyword}-{AdID}/{QueryString}/{AdGroup}-{Device}/{Network}/" class="text-primary">here&nbsp;</a><br><a href="biotox.cf/promo/privacy-policy" class="text-primary">Privacy Policy</a></div>
             </div></a></p>
         </div>
     </div>
