--- a/promo/Privacy Policy.html
+++ b/promo/Privacy Policy.html
@@ -203,7 +203,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </ul>
 </div>
 
-<p class="txt--center">Copyright 2021 - Biotox Nutrition - All Rights Reserved</p>
+<p class="txt--center">Copyright 2021 - Biotoxgold.cf- All Rights Reserved</p> <br><p><a href="https://biotoxgold.cf/"Home</a></p>
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="b573ffdee648eb8e4580b2fe-|49" defer=""></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"67bcbe2a98701819","version":"2021.7.0","r":1,"token":"108698370041447fa3d329e609dcf71e","si":10}'></script>
 </body>
 </html>
